Added restoreDB to v2
